<resources>
    <string name="app_name">MyCity</string>
    <string-array name="shopping">
        <item>Mall</item>
        <item>Superbazar</item>
        <item>Clothes</item>
        <item>Footwear</item>
        <item>Furniture</item>
        <item>General store</item>
        <item>Daily household</item>

    </string-array>
    <string-array name="food">
        <item>Restaurants</item>
        <item>Juice Corners</item>
        <item>Fast Food</item>
        <item>Dhabha</item>
        <item>Bar</item>
    </string-array>
    <string name="gym_sports">Gym Sports</string>
    <string name="parlourl_saloon">Parlourl Saloon</string>
    <string-array name="electronics">
        <item>Mobiles</item>
        <item>Electronics</item>
        <item>Computer and laptops</item>
    </string-array>
    <string-array name="health">
        <item>Hospitals</item>
        <item>Health Clinics</item>
        <item>Medical Stores</item>
        <item>Pet care</item>
    </string-array>
    <string-array name="travel">
        <item>Auto</item>
        <item>Taxi Car</item>
        <item>Airways</item>
        <item>Railways</item>
        <item>Roadways</item>
    </string-array>
    <string name="movies">Movies</string>
    <string-array name="education">
        <item>School</item>
        <item>Coaching Center</item>
        <item>Tuition</item>
        <item>Academy</item>
        <item>Book Store</item>

    </string-array>
    <string name="catering">Catering</string>
    <string-array name="rentals">
        <item>Shop</item>
        <item>House</item>
        <item>Goldam</item>
        <item>PG(paying guest)</item>
    </string-array>
    <string-array name="sell_buy">
        <item>Plot</item>
        <item>Shop</item>
        <item>House</item>
        <item>Vehicle</item>
        <item>Furniture</item>
        <item>Electronics</item>
        <item>Other</item>
    </string-array>
    <string-array name="agriculture">
        <item>Anaj mandi</item>
        <item>Sabji mandi</item>
        <item>Seeds Shop</item>

    </string-array>
    <string name="machanice">Machanice</string>
    <string name="other">Other</string>
    <string name="text">Light Mode</string>
    <string name="open">open</string>
    <string name="close">closed</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="sub_category">SubCategory</string>
    <string name="city">City</string>
    <string name="stores">Stores</string>
    <string-array name="Category">
        <item>Shopping</item>
        <item>Food</item>
        <item>Stay</item>
        <item>Parlourl Saloon</item>
        <item>Gym Sports</item>
        <item>Shows and Cinema</item>
        <item>Education</item>
        <item>Health</item>
        <item>Cyber</item>
        <item>Electronics</item>
        <item>Travel</item>
        <item>Vehicles and Workshop</item>
        <item>Booking</item>
        <item>Rentals</item>
        <item>Sell and Buy</item>
        <item>Buliding Material</item>
        <item>Agriculture</item>
        <item>Factories</item>
        <item>NGO and Club</item>
        <item>Banking</item>
        <item>Pentrol Pump</item>
    </string-array>
    <string name="category_0">Shopping</string>
    <string name="category_1">Food</string>
    <string name="category_2">Stay</string>
    <string name="category_3">Parlourl Saloon</string>
    <string name="category_4">Gym Sports</string>
    <string name="category_5">Shows and Cinema</string>
    <string name="category_6">Education</string>
    <string name="category_7">Health</string>
    <string name="category_8">Cyber</string>
    <string name="category_9">Electronics</string>
    <string name="category_10">Travel</string>
    <string name="category_11">Vehicles and Workshop</string>
    <string name="category_12">Booking</string>
    <string name="category_13">Rentals</string>
    <string name="category_14">Sell and Buy</string>
    <string name="category_15">Buliding Material</string>
    <string name="category_16">Agriculture</string>
    <string name="category_17">Factories</string>
    <string name="category_18">NGO and Club</string>
    <string name="category_19">Banking</string>
    <string name="category_20">Pentrol Pump</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="check_mail">We have sent you a verification link on your registerd email </string>
    <string name="facebook_app_id">2618037285122683</string>
    <string name="fb_login_protocol_scheme">fb2618037285122683</string>
    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Closed</string>
    <string name="setup_profile">Now let\s setup your store profile.\n Your store is not visible on CityTimes as of yet </string>
    <string name="let_go">Let\n Go!</string>
    <string name="settings">Settings</string>
    <string name="personalize">Personalize</string>
    <string name="english">English</string>
    <string name="change_languange_of_the_app">Change languange of the app</string>
    <string name="delhi">Delhi</string>
    <string name="default_city_for_news_alerts_and_more">Default city for news alerts and more</string>
    <string name="change">CHANGE</string>
    <string name="categories">Categories</string>
    <string name="all_services">All Services</string>
    <string-array name="government">
        <item>Police Station</item>
        <item>Fire Brigade</item>
        <item>Hospital</item>
        <item>College</item>
        <item>Court</item>
        <item>BDO office</item>
        <item>Post Office</item>
        <item>BEO office</item>
        <item>DEO office</item>
        <item>Panchayat Bhawan</item>
        <item>Other Office</item>
    </string-array>
    <string name="setup_your_store">Setup your Store!</string>
    <string name="we_are_indiain">We are INDIAIN</string>
    <string name="about_city">About City</string>
    <string name="movies_shows">Movies Shows</string>
    <string name="new_show">New Show</string>
    <string name="enter_these_details">Enter these details</string>
    <string name="procced">procced</string>
    <string name="favourite_stores">Favourite Stores</string>
    <string name="add_new_collection">Add new collection</string>
    <string name="my_product">My Product</string>
    <string name="products">Products</string>
    <string name="government_offices">Government Offices</string>
    <string name="offices">Offices</string>
    <string name="sort">Sort</string>
    <string name="plots">Plots</string>
    <string name="plot_for_selling">Plot for selling</string>
    <string name="price">Price:</string>
    <string name="opeing_closing_time">opeing-closing time</string>
    <string name="contact_number">contact number</string>
    <string name="register_your_service">Register your Service!</string>
    <string name="service_name">Service Name</string>
    <string name="owner_s_name">Owner\'s Name</string>
    <string name="mobile_number1">Mobile Number1</string>
    <string name="mobile_number2_optional">Mobile Number2(optional)</string>
    <string name="current_location">current location</string>
    <string name="store_category">Store Category</string>
    <string name="store_sub_category">Store Sub-Category</string>
    <string name="sell_products">Sell Products</string>
    <string name="products_for_selling">Products for selling</string>
    <string name="dark_theme">Dark theme</string>
    <string name="clear_app_cache">Clear app cache</string>
    <string name="support">Support</string>
    <string name="rate_us">Rate us!</string>
    <string name="share_this_app">share this app</string>
    <string name="feedback">Feedback</string>
    <string name="privacy">Privacy</string>
    <string name="terms_of_use">Terms of use</string>
    <string name="board_name">Board name</string>
    <string name="rating">rating</string>
    <string name="hostel_facility">Hostel facility!</string>
    <string name="transport_facility">transport facility!</string>
    <string name="description_not_added">Description not added</string>
    <string name="welcome_to">Welcome to</string>
    <string name="c">C</string>
    <string name="ity">ity</string>
    <string name="imes">imes</string>
    <string name="seller_name">Seller Name</string>
    <string name="home_delivery_not_available">Home Delivery Not Available</string>
    <string name="workers_required">Workers required!</string>
    <string name="transport_servics_avilable">Transport servics avilable</string>
    <string name="hostel_servics_avilable">Hostel servics avilable</string>
    <string name="see_all_photos">See all photos</string>
    <string name="shows">Shows</string>
    <string name="service_description">service description</string>
    <string name="apply">Apply</string>
    <string name="all_photos">All Photos</string>
    <string name="category_store">Category Store</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="email_address">Email Address</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register_now">Register Now</string>
    <string name="register_to_citytimes">Register to CityTimes</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="select_country">Select Country</string>
    <string name="select_state">Select State</string>
    <string name="select_city">Select City</string>
    <string name="register">Register</string>
    <string name="by_registering_you_agree_to">By registering you agree to</string>
    <string name="term_and_conditions">Term and Conditions</string>
    <string name="and">and</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="of_the_my_city">of the My City</string>
    <string name="add_collection">Add Collection</string>
    <string name="collection_name">Collection name</string>
    <string name="add">ADD</string>
    <string name="show_time">Show Time:</string>
    <string name="movie_name">movie name</string>
    <string name="tickit_price">tickit price</string>
    <string name="sub_category_name">Sub Category Name</string>
    <string name="category_name">category name</string>
    <string name="explore">Explore</string>
    <string name="city_name">City Name</string>
    <string name="sell_and_buy">Sell and Buy</string>
    <string name="logout">Logout</string>
    <string name="school_board">School board</string>
    <string name="days">Days:</string>
    <string name="s">S</string>
    <string name="m">M</string>
    <string name="cancel">CANCEL</string>
    <string name="update">Update</string>
    <string name="t">t</string>
    <string name="w">w</string>
    <string name="f">f</string>
    <string name="all">All</string>
    <string name="police_station">Police Station</string>
    <string name="fire_brigade">Fire Brigade</string>
    <string name="hospital">Hospital</string>
    <string name="college">College</string>
    <string name="court">Court</string>
    <string name="bdo_office">BDO office</string>
    <string name="post_office">Post Office</string>
    <string name="beo_office">BEO office</string>
    <string name="deo_office">DEO office</string>
    <string name="panchayat_bhawan">Panchayat Bhawan</string>
    <string name="home">Home</string>
    <string name="your_store">Your Store</string>
    <string name="nav_about_city">About City</string>
    <string name="favorites">Favorites</string>
    <string name="chairman">Chairman</string>
    <string name="principle_head_name">Principle/Head name</string>
    <string name="update_service_opening_day">Update service opening day</string>
</resources>