<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/nav_home"
        android:title="@string/home"
        android:icon="@drawable/home"
       />
    <item android:id="@+id/nav_store"
        android:title="@string/your_store"
        android:visible="false"
        android:icon="@drawable/store"
        />
    <item android:id="@+id/nav_about"
        android:title="@string/nav_about_city"
        android:icon="@drawable/about"
        />
    <item android:id="@+id/nav_favorites"
        android:title="@string/favorites"
        android:icon="@drawable/bookmark_border"
        />
    <item android:id="@+id/nav_settings"
        android:title="@string/settings"
        android:icon="@drawable/setting"
        />
    <item android:id="@+id/nav_logout"
        android:title="@string/logout"
        android:icon="@drawable/logout"
        />



</menu>