<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="50dp"
    android:background="@color/other_background"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <EditText
            android:visibility="gone"
            android:id="@+id/et_chairman_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/chairman"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>
        <EditText
            android:id="@+id/et_pricipal_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/principle_head_name"
            android:textSize="16sp"
            android:layout_margin="10dp"/>
        <TextView
            android:id="@+id/tv_school_board"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:paddingTop="5dp"
            android:paddingStart="5dp"
            android:textColor="@color/text_dark"
            android:paddingBottom="5dp"
            android:background="@drawable/pop_up_botton_background"
            android:text="@string/school_board"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_height="match_parent">
            <CheckBox
                android:id="@+id/checkbox_transport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/transport_facility"
                android:layout_marginStart="5dp"
                android:textColor="@color/text_dark"
                android:textSize="16sp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_height="match_parent">
            <CheckBox
                android:id="@+id/checkbox_hostel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_dark"
                android:text="@string/hostel_facility"
                android:layout_marginStart="5dp"
                android:textSize="16sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:layout_marginEnd="10dp"
                android:background="@drawable/button_background"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/btn_update"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/update"
                android:layout_marginStart="10dp"
                android:background="@drawable/button_background"
                android:layout_weight="1"/>

        </LinearLayout>

    </LinearLayout>
</ScrollView>
