<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <TextView
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_service_opening_day"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"


                android:text="@string/days"
                android:layout_gravity="center_vertical"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="10"
                android:orientation="horizontal">

                <ToggleButton
                    android:id="@+id/tSunday"
                    style="@style/toggleButton"

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"

                    android:textOff="@string/s"
                    android:textOn="@string/s"
                    android:textSize="18sp" />

                <ToggleButton
                    android:id="@+id/tMonday"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    style="@style/toggleButton"

                    android:textOff="@string/m"
                    android:textOn="@string/m"
                    android:textSize="18sp" />

                <ToggleButton
                    android:id="@+id/tTuseday"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    style="@style/toggleButton"


                    android:textOff="@string/t"
                    android:textOn="@string/t"
                    android:textSize="18dp" />

                <ToggleButton
                    android:id="@+id/tWednesday"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    style="@style/toggleButton"

                    android:textOff="@string/w"
                    android:textOn="@string/w"
                    android:textSize="18dp" />

                <ToggleButton
                    android:id="@+id/tThursday"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    style="@style/toggleButton"

                    android:textOff="@string/t"
                    android:textOn="@string/t"
                    android:textSize="18dp" />

                <ToggleButton
                    android:id="@+id/tFriday"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    style="@style/toggleButton"

                    android:textOff="@string/f"
                    android:textOn="@string/f"
                    android:textSize="18dp" />

                <ToggleButton
                    android:id="@+id/tSaturday"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    style="@style/toggleButton"

                    android:textOff="@string/s"
                    android:textOn="@string/s"
                    android:textSize="18dp" />


            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:layout_marginEnd="10dp"
                android:background="@drawable/button_background"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/btn_update"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/update"
                android:layout_marginStart="10dp"
                android:background="@drawable/button_background"
                android:layout_weight="1"/>

        </LinearLayout>


    </LinearLayout>
</androidx.cardview.widget.CardView>
